<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="400dp"
        android:layout_height="59dp"
        android:gravity="center"
        android:text="@string/welcome_txt"
        android:textAlignment="gravity"
        android:textColor="@color/primaryTextColor"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/existing_user_login"
        android:layout_width="352dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/existing_user_login"
        android:textAlignment="gravity"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="352dp"
        android:layout_height="59dp"
        android:layout_marginTop="280dp"
        android:text="@string/login_btn"
        android:onClick="signInUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_newuser"
        android:layout_width="352dp"
        android:layout_height="59dp"
        android:text="@string/register_newuser"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <Button
        android:id="@+id/register_newuser_btn"
        android:layout_width="352dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="76dp"
        android:text="@string/register_newuser_btn"
        android:onClick="registerNewUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_newuser"
        app:layout_constraintVertical_bias="0.146" />

</androidx.constraintlayout.widget.ConstraintLayout>