<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".LoginActivity"
    >

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="352dp"
        android:layout_height="59dp"
        android:layout_marginTop="136dp"
        android:gravity="center"
        android:text="@string/existing_user_login"
        android:textAlignment="gravity"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/email_login"
        android:layout_width="352dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_txt" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="352dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <Button
        android:id="@+id/login_existing_btn"
        android:layout_width="352dp"
        android:layout_height="59dp"
        android:text="@string/common_signin_button_text"
        android:onClick="signExistingUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

</androidx.constraintlayout.widget.ConstraintLayout>